# tmux-settings

./: pyproject.toml  tmux.conf
